# foundry-apim-mcp-server

./: .dockerignore  .env.example  Dockerfile  README.md  azure.yaml  pyproject.toml
.github/workflows/: build-push.yml
foundry_apim_mcp_server/: auth.py  foundry_client.py  server.py
infra/: main.bicep  main.bicepparam
infra/modules/aca/: container-app.bicep
infra/modules/iam/: role-assignment-cognitiveServices.bicep  subscription-ai-user.bicep  subscription-reader.bicep
infra/modules/types/: types.bicep
infra/policies/: mcp-session-affinity.xml
